# pythonator-123

./: .flake8  pyproject.toml
.github/workflows/: test_and_deploy.yml
pythonator_123/: .gitignore  LICENCE  README.md  __init__.py  amazing_function.py  pyproject.toml
pythonator_123.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/test_unit/: test_amazing_function.py
