[project]
name = "pythonator_123"
authors = [{name = "Rob Campbell", email = "git@raacampbell.com"}]
description = "My test package for stuff with things"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]
license = {text = "BSD 3-Clause"}
dependencies = ["numpy","pandas"]

[build-system]
requires = [
	"setuptools>=45",
	"wheel"
]

build-backend = "setuptools.build_meta"
